src/pre_push/plan/snapshots/gherrit__pre_push__plan__semantic_oracle__fresh_update_body.snap
---
source: src/pre_push/plan/semantic_oracle.rs
expression: "update_effects[0].body.as_deref().expect(\"the provisional body needs its final numbers\")"
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Body for G0

---

- 👉 #100

<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/G0 && git checkout -b pr-G0 FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/G0 && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/G0 && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/G0
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
